@@ -1,3 +1,10 @@
+2005-04-19 J.R. Heisey <jrheisey@sourceforge.com>
+	* src/breakpoints.cc, src/processor.cc, src/processor.h
+	plat/win32/gpsim.def, gpsim/gpsim.vcproj, modules/modules.vcproj:
+	Fixed corruption when clearing a Breakpoint_Instruction object.
+	The object was not removed properly from the chain of instruction
+	objects in the pma.
+
 2005-04-19 Scott Dattalo <scott@dattalo.com>
 	* src/os_dependent.cc: Added 'errno.h' to the list of include
 	files. (without this, os_dependent.cc wouldn't compile on
